@@ -1,3 +1,10 @@
+2011-03-18 Borut Razem <borut.razem AT gmail.com>
+
+	* sdas/asxxsrc/asmain.c:
+	  reverted incorrect fix for bug #3195019:
+	  option -o just instructs sdas to generate an object file,
+	  it doesn't take an object output file name as argument
+
 2011-03-18 Maarten Brock <sourceforge.brock AT dse.nl>
 
 	* src/cdbFile.c (cdbWriteBasicSymbol),
